added cols uploading file

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -14,7 +15,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,600;1,100;1,400&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -30,6 +34,116 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <link rel="canonical" href="https://colstonconcepts.com" />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-99300198-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "UA-99300198-1");
+    </script>
+
+    <!-- Clarity tracking code for https://colstonconcepts.com/ -->
+    <script>
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = "https://www.clarity.ms/tag/" + i + "?ref=bwt";
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, "clarity", "script", "iq2rsxkovd");
+    </script>
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:title" content="This is demo Title Content" />
+    <meta property="og:url" content="https://colstonconcepts.com" />
+    <meta
+      property="og:image"
+      content=" https://colston-images.sgp1.digitaloceanspaces.com/2g_0d7q_m-ColstonLogo.png"
+    />
+    <meta
+      property="og:image:url"
+      content="https://colston-images.sgp1.digitaloceanspaces.com/2g_0d7q_m-ColstonLogo.png"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://colston-images.sgp1.digitaloceanspaces.com/2g_0d7q_m-ColstonLogo.png"
+    />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:site_name" content="Colstonconcepts" />
+    <meta
+      property="og:description"
+      content="this is Demo description content."
+    />
+    <meta property="og:see_also" content="https://colstonconcepts.com" />
+    <meta property="article:author" content="Colstonconcepts" />
+    <!-- Open Graph Meta Tags -->
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content=" This is demo Title Content " />
+    <meta
+      name="twitter:description"
+      content=" this is Demo description content."
+    />
+    <meta
+      name="twitter:image"
+      content=" https://colston-images.sgp1.digitaloceanspaces.com/2g_0d7q_m-ColstonLogo.png "
+    />
+    <meta name="twitter:image:alt" content=" this is Demo content." />
+    <meta name="twitter:player" content="@colstonconcepts " />
+    <meta name="twitter:player:width" content="480" />
+    <meta name="twitter:player:height" content="270" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "http://www.schema.org",
+        "@type": "organization",
+        "name": " ColstonConcepts ",
+        "image": " https://colston-images.sgp1.digitaloceanspaces.com/_UC5BbrhY-Virtual%20Tour%20Image.png",
+        "headline": "This is demo content",
+        "url": " https://colstonconcepts.com",
+        "logo": " https://colston-images.sgp1.digitaloceanspaces.com/2g_0d7q_m-ColstonLogo.png ",
+        "description": " This is demo description content",
+        "telephone": " 7428201028 ",
+        "contactType": "Colston",
+        "email": " info@colstonconcepts.com ",
+
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": " 24, Ring Road, Lajpat Nagar - IV, Lower Ground, ",
+          "addressLocality": "New Delhi ",
+          "addressRegion": "Delhi",
+          "postalCode": "110024",
+          "addressCountry": "india"
+        },
+
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.2",
+          "reviewCount": "482",
+          "worstRating": "1",
+          "bestRating": "5"
+        }
+      }
+    </script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
